// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"postcssOptions" option should work the the "map" option and generate inlined source maps: css 1`] = `
"a { color: black }

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSxJQUFJLGFBQWEiLCJmaWxlIjoic3R5bGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiYSB7IGNvbG9yOiBibGFjayB9XG4iXX0= */"
`;

exports[`"postcssOptions" option should work the the "map" option and generate inlined source maps: errors 1`] = `Array []`;

exports[`"postcssOptions" option should work the the "map" option and generate inlined source maps: map 1`] = `undefined`;

exports[`"postcssOptions" option should work the the "map" option and generate inlined source maps: warnings 1`] = `Array []`;

exports[`"postcssOptions" option should work with "from", "to" and "map" options: css 1`] = `
"a { color: black }
"
`;

exports[`"postcssOptions" option should work with "from", "to" and "map" options: errors 1`] = `Array []`;

exports[`"postcssOptions" option should work with "from", "to" and "map" options: map 1`] = `
Object {
  "file": "x",
  "mappings": "AAAA,IAAI,aAAa",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: black }
",
  ],
  "version": 3,
}
`;

exports[`"postcssOptions" option should work with "from", "to" and "map" options: warnings 1`] = `Array []`;
